--- a/tool/cert/index.html
+++ b/tool/cert/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
     <link rel="icon" href="https://api.wxies.cn/avatar/qq.php?qq=1115058004">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>焦迈奇游泳回家演唱会</title>
+    <title>焦迈奇游泳回家演唱会电子奖状生成</title>
     <style>
-        /* Reset default margin and padding */
         * {
             margin: 0;
             padding: 0;
@@ -14,7 +14,7 @@
         }
 
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: 'Roboto', sans-serif;
             background-color: #f4f7fc;
             color: #333;
             display: flex;
@@ -26,34 +26,61 @@
 
         .container {
             background: white;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            padding: 30px;
+            border-radius: 12px;
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+            padding: 40px;
             width: 100%;
             max-width: 600px;
             text-align: center;
+            transition: transform 0.3s ease;
+        }
+
+        .container:hover {
+            transform: translateY(-5px);
         }
 
         h1 {
-            color: #4CAF50;
-            font-size: 28px;
-            margin-bottom: 20px;
+            color: #007bff;
+            font-size: 32px;
+            margin-bottom: 30px;
+            text-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
 
         label {
-            font-size: 16px;
+            font-size: 18px;
             font-weight: bold;
-            margin-bottom: 8px;
+            margin-bottom: 12px;
             display: block;
+            color: #555;
         }
 
         input[type="text"] {
             width: 100%;
-            padding: 10px;
-            margin-bottom: 20px;
+            padding: 14px;
+            margin-bottom: 25px;
             border: 1px solid #ddd;
-            border-radius: 4px;
+            border-radius: 6px;
             font-size: 16px;
+            transition: border-color 0.3s ease;
+        }
+
+        input[type="text"]:focus {
+            border-color: #007bff;
+        }
+
+        input[type="button"] {
+            background-color: #007bff;
+            color: white;
+            padding: 14px 30px;
+            border: none;
+            border-radius: 6px;
+            font-size: 18px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        input[type="button"]:hover {
+            background-color: #0056b3;
         }
 
         .checkbox-container {
@@ -74,7 +101,7 @@
         }
 
         input[type="submit"] {
-            background-color: #4CAF50;
+            background-color: #007bff;
             color: white;
             padding: 10px 20px;
             border: none;
@@ -85,22 +112,27 @@
         }
 
         input[type="submit"]:hover {
-            background-color: #45a049;
+            background-color: #0056b3;
         }
 
-        /* Responsive Design */
         @media (max-width: 768px) {
             .container {
-                padding: 20px;
+                padding: 25px;
                 width: 90%;
             }
 
             h1 {
-                font-size: 24px;
+                font-size: 26px;
             }
 
-            input[type="text"], input[type="submit"] {
+            input[type="text"],
+            input[type="button"],
+            input[type="submit"] {
                 font-size: 14px;
+            }
+
+            label {
+                font-size: 16px;
             }
 
             .checkbox-container label {
@@ -111,15 +143,13 @@
         .message {
             margin-top: 20px;
             font-size: 18px;
-            color: #4CAF50;
+            color: #007bff;
         }
 
-        /* 隐藏内容容器 */
         .content {
             display: none;
         }
 
-        /* 隐藏问题 */
         .question {
             display: block;
         }
@@ -128,18 +158,18 @@
             display: none;
         }
     </style>
+    <script src="jszip.min.js"></script>
 </head>
+
 <body>
     <div class="container">
-        <h1>焦迈奇游泳回家演唱会</h1>
-        <!-- 问题和答案输入框 -->
+        <h1>焦迈奇游泳回家演唱会电子奖状生成</h1>
         <div id="question" class="question">
             <label for="answer">焦迈奇游泳回家演唱会一共有几站？</label>
-            <input type="text" id="answer" name="answer" placeholder="请输入答案">
+            <input type="text" id="answer" name="answer" placeholder="请输入阿拉伯数字">
             <input type="button" value="提交" onclick="checkAnswer()">
         </div>
 
-        <!-- 填写信息表单 -->
         <div id="content" class="content">
             <form id="updateForm">
                 <label for="name">名称</label>
@@ -179,42 +209,83 @@
         function checkAnswer() {
             const answer = document.getElementById("answer").value;
 
-            // 验证用户输入的答案是否正确
             if (answer === "10") {
-                // 如果答案正确，隐藏问题并显示填写信息的表单
                 document.getElementById("question").classList.add("hidden");
                 document.getElementById("content").style.display = "block";
-                document.querySelector("h1").textContent = "焦迈奇游泳回家演唱会";
+                document.querySelector("h1").textContent = "焦迈奇游泳回家演唱会电子奖状生成";
             } else {
                 alert("答案错误，请输入正确的答案！");
             }
         }
 
-        document.getElementById("updateForm").addEventListener("submit", function(event) {
+        document.getElementById("updateForm").addEventListener("submit", function (event) {
             event.preventDefault();
 
-            // 获取输入框和复选框的值
             const name = document.getElementById("name").value;
             const selectedCities = Array.from(document.querySelectorAll('input[name="city"]:checked')).map(checkbox => checkbox.value);
 
-            // 检查是否有名称和选择的城市
             if (name && selectedCities.length > 0) {
-                // 生成提示信息
                 const citiesList = selectedCities.join("、");
                 const message = `${name} 同学，你在焦迈奇“游泳回家”巡回演唱会的十场演唱会中去过${citiesList}的演唱会现场，现在为你颁发毕业证书。游泳健将，游泳回家，毕业快乐！`;
 
-                // 显示弹窗提示
-                alert(message);
-
-                // 遍历选中的城市，触发多个请求
-                selectedCities.forEach(city => {
+                if (selectedCities.length === 1) {
+                    const city = selectedCities[0];
                     const url = `https://api.wxies.cn/tool/cert/cert.php?name=${encodeURIComponent(name)}&city=${encodeURIComponent(city)}`;
-                    window.open(url, '_blank');  // 在新标签页中打开请求
-                });
+                    fetch(url)
+                        .then(response => response.blob())
+                        .then(blob => {
+                            const downloadUrl = URL.createObjectURL(blob);
+                            const a = document.createElement('a');
+                            a.href = downloadUrl;
+                            a.download = `${name}_${city}.png`;
+                            a.style.display = 'none';
+                            document.body.appendChild(a);
+                            a.click();
+                            URL.revokeObjectURL(downloadUrl);
+                            document.body.removeChild(a);
+                        })
+                        .catch(error => {
+                            console.error('下载失败:', error);
+                        });
+                } else {
+                    const zip = new JSZip();
+                    const filePromises = selectedCities.map(city => {
+                        const url = `https://api.wxies.cn/tool/cert/cert.php?name=${encodeURIComponent(name)}&city=${encodeURIComponent(city)}`;
+                        return fetch(url)
+                            .then(response => response.blob())
+                            .then(blob => zip.file(`${name}_${city}.png`, blob))
+                            .catch(error => console.error('下载失败:', error));
+                    });
+
+                    Promise.all(filePromises)
+                        .then(() => {
+                            zip.generateAsync({ type: "blob" })
+                                .then(function (content) {
+                                    const a = document.createElement('a');
+                                    const downloadUrl = URL.createObjectURL(content);
+                                    a.href = downloadUrl;
+                                    a.download = `${name}_电子奖状.zip`;
+                                    a.style.display = 'none';
+                                    document.body.appendChild(a);
+                                    a.click();
+                                    URL.revokeObjectURL(downloadUrl);
+                                    document.body.removeChild(a);
+                                })
+                                .catch(function (error) {
+                                    console.error('打包失败:', error);
+                                });
+                        })
+                        .catch(error => {
+                            console.error('文件下载错误:', error);
+                        });
+                }
+
+                alert(message);
             } else {
                 alert("请填写名称并选择城市！");
             }
         });
     </script>
 </body>
+
 </html>
